# hellovmex

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/hello_vmex/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/jni/: JNIWrapper.cpp  JNIWrapper.hpp  native-lib.cpp
app/src/main/cpp/tony/: CMakeLists.txt
app/src/main/cpp/tony/include/: CallbackInterface.h  Controller.h  Invoker.h
app/src/main/cpp/tony/include/model/: ModelReader.h
app/src/main/cpp/tony/include/utils/: LogUtil.h  TimeUtil.hpp
app/src/main/cpp/tony/src/: Controller.cpp  Invoker.cpp
app/src/main/cpp/tony/src/model/: ModelReader.cpp
app/src/main/cpp/tony/src/utils/: TimeUtil.cpp
app/src/main/cpp/tony/tflite/: CMakeLists.txt
app/src/main/cpp/tony/tflite/cutemodel/: CuteModel.hpp
app/src/main/java/com/example/hello_vmex/: MainActivity.java
app/src/main/java/com/example/hello_vmex/jni/: CallbackInterface.java  NativeWrapper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/hello_vmex/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
